@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-08-08
+2013-07-29 Andy Salnikov
+- add empty implementation of store_Type_vN() methods
+
 Tag: V00-08-07
 2013-07-17 David Schneider
 - In the python wrappers, psddl_pytyon, creating docstrings for classes and methods 
@@ -20,7 +24,6 @@ Tag: V00-08-06
 2013-07-17 David Schneider
 - Exporting the pstype version and TypeId into the python wrappers.
 
-	
 Tag: V00-08-05
 2013-07-16 Andy Salnikov
 - psana backend:
